# Expense_tracker_MCP

./: .gitignore  Dockerfile  README.md  docker-compose.yml  help.txt  main.py  pyproject.toml  requriments.txt
MCP/: Expense_tracker_mcp.py  models.py
